# emulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-clangtron-windows.sh  vcpkg.json
.reuse/: dep5
CMakeModules/: CPM.cmake  CopyCitronFFmpegDeps.cmake  CopyCitronQt6Deps.cmake  CopyMinGWDeps.cmake  DownloadExternals.cmake  TzdbWindowsFix.cmake  dependencies.cmake  openssl_build.cmake  qt_download.cmake
docs/: BUILDING-CLANGTRON-WINDOWS.md
src/: CMakeLists.txt
src/audio_core/: CMakeLists.txt  audio_in_manager.h  audio_out_manager.h  audio_snoop_manager.cpp  audio_system_manager.cpp
src/citron/: CMakeLists.txt  Info.plist  about_dialog.cpp  about_dialog.h  aboutdialog.ui  bootmanager.cpp  bootmanager.h  compatdb.cpp  compatdb.ui  custom_metadata.cpp  custom_metadata.h  custom_metadata_dialog.cpp  custom_metadata_dialog.h  custom_metadata_dialog.ui  discord_impl.cpp  discord_impl.h  game_details_panel.cpp  game_details_panel.h  game_grid_delegate.cpp  game_grid_delegate.h  game_list.cpp  game_list.h  game_list_delegate.cpp  game_list_delegate.h  game_list_p.h  game_list_worker.cpp  game_list_worker.h  hotkey_profile_manager.cpp  icon_selection_dialog.cpp  icon_selection_dialog.h  loading_screen.cpp  main.cpp  main.h  main.ui  play_time_manager.cpp  play_time_manager.h  poster_selection_dialog.cpp  poster_selection_dialog.h  qt_common.cpp  setup_wizard.cpp  (+7 more)
src/citron_cmd/: CMakeLists.txt  citron.cpp  sdl_config.cpp
src/common/: CMakeLists.txt  address_space.inc  assert.cpp  assert.h  cityhash.cpp  (+23 more)
src/shader_tool/: CMakeLists.txt  shader_tool.cpp
(+645 files in other folders)
